ApiArenaXperience/src/main/java/com/example/ApiArenaXperience/error/user/UsersNotFoundException.java
package com.example.ApiArenaXperience.error.user;

public class UsersNotFoundException extends RuntimeException {
    public UsersNotFoundException(String message) {
        super(message);
    }
}
